# Aprendendo_sqlite

./: .gitignore  01 Aprendendo_count.sql  03 Aprendendo_coalesce.sql  06 Aprendendo_sub-query.sql  07 Aprendendo_case_when.sql  08 Aprendendo_left_join.sql  09 Aprendendo_join_group_by.sql  10 Aprendendo_join_group_by_where.sql  101 Exercicio_Where_Having_order.sql  11 Aprendendo_group_by_join_group.sql  12 Aprendendo_join_group.sql  14 Aprendendo_join_group_duplo.sql  15 Aprendendo_join_group_inner.sql  16 Aprendendo_with_sub_query.sql  17.Aprendendo_subquery.sql  18.Aprendendo_row_number_over.sql  19.Aprendendo_lag.sql  Aprendendo_count.sql  Aprendendo_filtro.sql  Aprendendo_having.sql  Aprendendo_max_min_avg.sql  Aprendendo_sub-query.sql  Exercicio_count.sql  exercicio_count.sql  pyproject.toml
