[tool.poetry]
name = "aprendendo-sqlite"
version = "0.1.0"
description = ""
authors = ["Wendel <wendelvaccani@gmail.com>"]
readme = "README.md"
packages = [{include = "aprendendo_sqlite"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
